api servicetype
